@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2013-10-22  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>wand/drawing_wand.c (DrawSetStrokeLineJoin): BevelJoin should
+produce MVG text &quot;bevel&quot;.</li>
+<li>magick/draw.c (DrawSetStrokeLineJoin): BevelJoin should produce
+MVG text &quot;bevel&quot;.  Fixes SourceForge bug &quot;#245 error occured to
+DrawableStrokeLineJoin(LineJoin.BevelJoin)&quot;.</li>
+</ul>
+</blockquote>
 <p>2013-10-16  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">glennrp<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
